force-app/main/default/objects/Opportunity/fields/Admission_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Admission_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated Field - Do not use anywhere.</description>
    <inlineHelpText>Indicates Admission Coordinator responsible for this Referral</inlineHelpText>
    <label>Admission Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>