force-app/main/default/objects/Opportunity/fields/agency_of_Case_Manager__c.field-meta.xml
<CustomField>
    <fullName>agency_of_Case_Manager__c</fullName>
    <label>Agency of Case Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>