force-app/main/default/objects/Opportunity/fields/Agrees_to_staff_w_Crim_Hx__c.field-meta.xml
<CustomField>
    <fullName>Agrees_to_staff_w_Crim_Hx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agrees to staff w/Crim Hx</label>
    <type>Checkbox</type>
</CustomField>