force-app/main/default/objects/Opportunity/fields/Assigned_sex_at_birth__c.field-meta.xml
<CustomField>
    <fullName>Assigned_sex_at_birth__c</fullName>
    <label>Assigned sex at birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>