force-app/main/default/objects/Opportunity/fields/Auth_Requested_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Auth_Requested_Time_Spent__c</fullName>
    <label>Auth. Requested Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>