force-app/main/default/objects/Opportunity/fields/AuthComplete_Date__c.field-meta.xml
<CustomField>
    <fullName>AuthComplete_Date__c</fullName>
    <label>Auth Complete Date</label>
    <type>Date</type>
</CustomField>