force-app/main/default/objects/Opportunity/fields/Authorization_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorization_End_Date__c</fullName>
    <description>Date when the current MCO authorization expires</description>
    <label>Authorization End Date</label>
    <type>Date</type>
</CustomField>