force-app/main/default/objects/Opportunity/fields/Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Number__c</fullName>
    <description>MCO authorization reference number</description>
    <label>Authorization Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>