force-app/main/default/objects/Opportunity/fields/Authorization_Status__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Status__c</fullName>
    <description>MCO authorization status</description>
    <label>Authorization Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>