force-app/main/default/objects/Opportunity/fields/Authorized_Hours__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Hours__c</fullName>
    <description>Number of service hours authorized by the MCO</description>
    <label>Authorized Hours</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>