force-app/main/default/objects/Opportunity/fields/AuthRequested_Date__c.field-meta.xml
<CustomField>
    <fullName>AuthRequested_Date__c</fullName>
    <label>Auth Requested Date</label>
    <type>Date</type>
</CustomField>