force-app/main/default/objects/Opportunity/fields/Cancelled_Reason_Note__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Reason_Note__c</fullName>
    <label>Cancelled Reason Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>