force-app/main/default/objects/Opportunity/fields/Cancelled_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Time_Spent__c</fullName>
    <label>Cancelled Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>