force-app/main/default/objects/Opportunity/fields/Credible_Release_Of_Information__c.field-meta.xml
<CustomField>
    <fullName>Credible_Release_Of_Information__c</fullName>
    <label>Release Of Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>