force-app/main/default/objects/Opportunity/fields/Days_to_Admission__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Admission__c</fullName>
    <description>Number of days between Referral Date and Admission Date</description>
    <formula>IF(
    AND(
        NOT(ISBLANK(Admission_Date__c)),
        NOT(ISBLANK(Referral_Date__c))
    ),
    Admission_Date__c - Referral_Date__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Admission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>