force-app/main/default/objects/Opportunity/fields/Eligibility_Verified__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Insurance eligibility confirmed</description>
    <label>Eligibility Verified</label>
    <type>Checkbox</type>
</CustomField>