force-app/main/default/objects/Opportunity/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <label>Facility Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>