force-app/main/default/objects/Opportunity/fields/Field_Representative__c.field-meta.xml
<CustomField>
    <fullName>Field_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to populate Marketer responsible for the record</inlineHelpText>
    <label>Field Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Field_Representatives</relationshipName>
    <type>Lookup</type>
</CustomField>