force-app/main/default/objects/Opportunity/fields/Forensic_Status__c.field-meta.xml
<CustomField>
    <fullName>Forensic_Status__c</fullName>
    <label>Forensic Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>Active Community</fullName>
            </value>
            <value>
                <fullName>No Longer Forensic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>