force-app/main/default/objects/Opportunity/fields/Gender_Identity__c.field-meta.xml
<CustomField>
    <fullName>Gender_Identity__c</fullName>
    <label>Gender Identity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Choose not to disclose</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Genderqueer, neither exclusively male nor female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Transgender Female/Trans Woman/ Male-to-Female (MTF)</fullName>
            </value>
            <value>
                <fullName>Transgender Male/Trans Man/ Female-to-Male (FTM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>