force-app/main/default/objects/Opportunity/fields/IDD__c.field-meta.xml
<CustomField>
    <fullName>IDD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intellectual/Developmental Disability?</label>
    <type>Checkbox</type>
</CustomField>