force-app/main/default/objects/Opportunity/fields/Intake_Type__c.field-meta.xml
<CustomField>
    <fullName>Intake_Type__c</fullName>
    <label>Intake Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>