force-app/main/default/objects/Opportunity/fields/Interpreter_Needed__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interpreter Needed?</label>
    <type>Checkbox</type>
</CustomField>