force-app/main/default/objects/Opportunity/fields/IRP_Completed__c.field-meta.xml
<CustomField>
    <fullName>IRP_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Initial IRP has been completed</description>
    <label>IRP Completed</label>
    <type>Checkbox</type>
</CustomField>