force-app/main/default/objects/Opportunity/fields/IRP_involvement__c.field-meta.xml
<CustomField>
    <fullName>IRP_involvement__c</fullName>
    <label>IRP involvement?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>