force-app/main/default/objects/Opportunity/fields/IRP_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>IRP_Scheduled_Date__c</fullName>
    <description>When the Initial IRP is scheduled</description>
    <label>IRP Scheduled Date</label>
    <type>DateTime</type>
</CustomField>