force-app/main/default/objects/Opportunity/fields/IRP_Specialist__c.field-meta.xml
<CustomField>
    <fullName>IRP_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specialist assigned to conduct Initial IRP</description>
    <label>IRP Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Referrals (IRP Specialist)</relationshipLabel>
    <relationshipName>Referrals_IRP_Specialist</relationshipName>
    <type>Lookup</type>
</CustomField>