force-app/main/default/objects/Opportunity/fields/Is_There_a_Hx_of_DA_Use__c.field-meta.xml
<CustomField>
    <fullName>Is_There_a_Hx_of_DA_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is There a Hx of D&amp;A Use?</label>
    <type>Checkbox</type>
</CustomField>