force-app/main/default/objects/Opportunity/fields/Language_preferences__c.field-meta.xml
<CustomField>
    <fullName>Language_preferences__c</fullName>
    <label>Language preferences</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>