force-app/main/default/objects/Opportunity/fields/Last_Psych_Eval__c.field-meta.xml
<CustomField>
    <fullName>Last_Psych_Eval__c</fullName>
    <label>Last Psych Eval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>