force-app/main/default/objects/Opportunity/fields/Last_Stage_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Update_Date__c</fullName>
    <label>Last Stage Update Date</label>
    <type>Date</type>
</CustomField>