force-app/main/default/objects/Opportunity/fields/MAID__c.field-meta.xml
<CustomField>
    <fullName>MAID__c</fullName>
    <label>MAID#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>