force-app/main/default/objects/Opportunity/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>TRIM(
    Peer_Lead__r.FirstName &amp; &quot; &quot; &amp;
    IF(NOT(ISBLANK(Peer_Lead__r.MiddleName)), Peer_Lead__r.MiddleName &amp; &quot; &quot;, &quot;&quot;) &amp;
    Peer_Lead__r.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>