force-app/main/default/objects/Opportunity/fields/name_of_Case_Manager__c.field-meta.xml
<CustomField>
    <fullName>name_of_Case_Manager__c</fullName>
    <label>Name of Case Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>