force-app/main/default/objects/Opportunity/fields/No_Admit_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Admit_Reason__c</fullName>
    <label>No Admit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ineligible for Medicaid</fullName>
            </value>
            <value>
                <fullName>No forensic involvement in the past year (Delco)</fullName>
            </value>
            <value>
                <fullName>Peer cannot be reached</fullName>
            </value>
            <value>
                <fullName>Peer does not have a MH diagnosis</fullName>
            </value>
            <value>
                <fullName>Peer has other services</fullName>
            </value>
            <value>
                <fullName>Peer has private insurance</fullName>
            </value>
            <value>
                <fullName>Peer in D&amp;A services</fullName>
            </value>
            <value>
                <fullName>Peer in rehab</fullName>
            </value>
            <value>
                <fullName>Peer incarcerated</fullName>
            </value>
            <value>
                <fullName>Peer is involved with another PSS provider</fullName>
            </value>
            <value>
                <fullName>Peer is not appropriate for PSS</fullName>
            </value>
            <value>
                <fullName>Peer is out of service area</fullName>
            </value>
            <value>
                <fullName>Peer no longer wants services</fullName>
            </value>
            <value>
                <fullName>Peer refused Eval</fullName>
            </value>
            <value>
                <fullName>Peer unable to get a script for PSS</fullName>
            </value>
            <value>
                <fullName>Peer went inpatient</fullName>
            </value>
            <value>
                <fullName>Peer went to another PSS provider</fullName>
            </value>
            <value>
                <fullName>Peers MA does not include PSS</fullName>
            </value>
            <value>
                <fullName>Peers MA is inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>