force-app/main/default/objects/Opportunity/fields/On_Service__c.field-meta.xml
<CustomField>
    <fullName>On_Service__c</fullName>
    <label>On Service Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>