force-app/main/default/objects/Opportunity/fields/OnService_Date__c.field-meta.xml
<CustomField>
    <fullName>OnService_Date__c</fullName>
    <label>On Service Date</label>
    <type>Date</type>
</CustomField>