force-app/main/default/objects/Opportunity/fields/Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Date__c</fullName>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>