force-app/main/default/objects/Opportunity/fields/Outreach_Counter__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Counter__c</fullName>
    <label>Outreach Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>