force-app/main/default/objects/Opportunity/fields/Owner_name__c.field-meta.xml
<CustomField>
    <fullName>Owner_name__c</fullName>
    <label>Owner_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>