force-app/main/default/objects/Opportunity/fields/Payor__c.field-meta.xml
<CustomField>
    <fullName>Payor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Payor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payor Referrals</relationshipLabel>
    <relationshipName>Payor_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>