force-app/main/default/objects/Opportunity/fields/Peer_Lead__c.field-meta.xml
<CustomField>
    <fullName>Peer_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Peer_Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>