force-app/main/default/objects/Opportunity/fields/Peer_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Peer_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The CPS/CRS staff member assigned to this peer for ongoing services</description>
    <label>Peer Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referrals_As_Peer_Specialist</relationshipName>
    <type>Lookup</type>
</CustomField>