force-app/main/default/objects/Opportunity/fields/Peer_ssn__c.field-meta.xml
<CustomField>
    <fullName>Peer_ssn__c</fullName>
    <label>SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>